--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "firebase": "^7.15.5",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.0.3",
     "react": "^16.13.1",
