--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^7.15.5",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.0.3",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
